@@ -1,3 +1,4 @@
+Implement lshift/rshift
 Add support for fixed total number of bits
 Improve treatment of rounding-errors on truncated Taylor-series
 Improve estimate of augmented resolution needed in cached pi, e etc
